--- a/main/templates/main/search.html
+++ b/main/templates/main/search.html
@@ -1,31 +1,62 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ request.user.username }}
+    {{ request.user.username }}
 {% endblock %}
-
 
 {% block content %}
 
-{% for user in users %}
-    {% if user.id != request.user.id %}
-        <div class="sea-prof">
-        {% if user.profile.avatar %}
-            <h2>
-                <a class="user-name-sea" href="{% url 'get_user' user.id %}">
-                    <img class="avatar-pic-sea" src="{{ user.profile.avatar.url }}" alt="XXX" width="350" >{{user.username}}
-                </a>
-            </h2>
-        {% else %}
-            <h2>
-                <a class="user-name-sea" href="{% url 'get_user' user.id %}">
-                    <img class="avatar-pic-sea" src="https://ih1.redbubble.net/image.1417647673.2505/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                         alt="X" width="350">{{user.username}}
-                </a>
-            </h2>
-        {% endif %}
-        </div>
-    {% endif %}
-{% endfor %}
+{% if users %}
+    <div class="user-card-grid">
+        {% for user in users %}
+            {% if user.id != request.user.id %}
+                <div class="comment">
+                    <div class="comment__content">
+                        <div class="user-card__body">
+                            <div>
+                                <a class="comment__user" href="{% url 'get_user' user.id %}">
+                                    {{user.username}}
+                                </a>
+                            </div>
+
+                            <p class="comment__text">
+                                <a class="" href="{% url 'get_user' user.id %}">
+                                    {% if user.profile.avatar %}
+                                        <img
+                                                class="user-card__img"
+                                                src="{{ user.profile.avatar.url }}"
+                                                alt="profile avatar"
+                                        >
+                                    {% else %}
+                                        <img
+                                            class="user-card__img"
+                                            src="https://ih1.redbubble.net/image.1417647673.2505/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                                            alt="profile avatar"
+                                        >
+                                    {% endif %}
+
+                                </a>
+                            </p>
+                        </div>
+
+
+                        <div class="comment__footer">
+                            <div class="comment__footer-box">
+                                {{ user.id }}
+                            </div>
+
+                            <div class="comment__created-at">
+                                <a class="button button--main button--user-card" href="{% url 'get_user' user.id %}">open</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+
+{% else %}
+    <h1>No users found</h1>
+{% endif %}
 
 {% endblock %}
