--- a/templates/base.html
+++ b/templates/base.html
@@ -1,44 +1,56 @@
 <!doctype html>
 <html lang="`ru`" class="all-text">
-<head>
-    <!-- connect static to file -->
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}User{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'main/css/style.css' %}" type="text/css">
-    <script src="https://kit.fontawesome.com/f86734ca01.js" crossorigin="anonymous"></script>
-</head>
-<body>
-{% include 'inc/_nav.html' %}
+    <head>
+        <!-- connect static to file -->
+        {% load static %}
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>{% block title %}User{% endblock %}</title>
+        <link rel="stylesheet" href="{% static 'main/css/style.css' %}" type="text/css">
+        <link rel="icon" type="image/x-icon" href="{% static 'main/media/duckieWallFavi.png' %}">
 
-{% block search %}
+        <link
+          href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
+          rel="stylesheet"  type='text/css'
+        >
 
-{% endblock %}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Mono&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+        <script src="https://kit.fontawesome.com/f86734ca01.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        {% include 'inc/_nav.html' %}
+
+        {% block search %}
+
+        {% endblock %}
 
 
 
-{% if messages %}
-    {% for message in messages %}
-        {%if message.tags == 'error' %}
-            <div class="err-box"> {{message}} </div>
-        {% else %}
-            <div class="sucss-box">{{message}}</div>
+        {% if messages %}
+            {% for message in messages %}
+                {%if message.tags == 'error' %}
+                    <div class="err-box"> {{message}} </div>
+                {% else %}
+                    <div class="sucss-box">{{message}}</div>
+                {% endif %}
+            {% endfor %}
         {% endif %}
-    {% endfor %}
-{% endif %}
 
-{% block catbar %}
+        {% block catbar %}
 
-{% endblock %}
+        {% endblock %}
 
-<div class="main">
-{% block content %}
-content
-{% endblock %}
-</div>
+        <div class="main">
+            {% block content %}
+                content
+            {% endblock %}
+        </div>
 
-</body>
+        {% include 'inc/_footer.html' %}
+    </body>
 </html>
