homepage link added

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -54,6 +54,12 @@
         </div>
     {% else %}
         <h1>Your feed will be here.</h1>
+        <a
+            style="text-decoration: underline; color: #6abd16"
+            href="/search/?qwery=u"
+        >
+            SOME USERS IS HERE
+        </a>
     {% endif %}
 {% else %}
     <h1>Duckie, please, Log In or Sing Up to see your feed!</h1>
